--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,10 +1,10 @@
 listener {
-    timeout = 600
-    on-timeout = hyprlock
+    timeout = 60000
+    # on-timeout = hyprlock
     on-resume = notify-send "Welcome back!"
 }
 
 listener {
-    timeout = 1200
-    on-timeout = systemctl hibernate
+    timeout = 120000
+    # on-timeout = systemctl hibernate
 }
