--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,17 +1,19 @@
-monitor=eDP-1,1920x1080,0x0,1
-monitor=,prefered,auto,auto
-
 # Defualt programs
 $terminal = kitty
 $fileManager = thunar
 $menu = rofi -show drun
 
 # Source files
+$hyprDir = ~/.config/hypr
 $sourceDir = ~/.config/hypr/hypr.d
-
-# exec-once
-source = $sourceDir/exec-once.conf
+source = $sourceDir/nvidia.conf
 source = $sourceDir/mocha.conf
+source = $sourceDir/exec-once.conf
+source = $sourceDir/win-rules.conf
+source = $hyprDir/monitors.conf
+
+
+# debug:disable_logs = false
 
 
 # Some default env vars.
@@ -22,7 +24,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct
 input {
     kb_layout = us
     kb_variant =
-    kb_model = latitude
+    kb_model = pc102
     kb_options = grp:caps_switch
     kb_rules =
 
@@ -32,7 +34,7 @@ input {
         natural_scroll = yes
     }
 
-    sensitivity = -0.05
+    sensitivity = -0.3
 }
 
 general {
@@ -59,7 +61,7 @@ decoration {
         enabled = false
     }
 
-    drop_shadow = no
+    #drop_shadow = no
 }
 
 animations {
@@ -86,7 +88,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    #new_is_master = true
 }
 
 gestures {
@@ -163,8 +165,13 @@ binde = ,XF86MonBrightnessDown, exec, brightnessctl set -n 15%-
 binde = ,XF86MonBrightnessUp, exec, brightnessctl set 5%+
 
 # volume control
+
+$audioNotifTemplate = notify-send -t 3000 -a Playerctl
 $audioSink = @DEFAULT_AUDIO_SINK@
-binde = ,XF86AudioMute, exec, wpctl set-mute $audioSink toggle
+bindr = ,XF86AudioPrev, exec, playerctl previous && $audioNotifTemplate "Audio track Previous"
+bindr = ,XF86AudioPlay, exec, playerctl play-pause && $audioNotifTemplate "Audio track toggled state"
+bindr = ,XF86AudioNext, exec, playerctl next && $audioNotifTemplate "Audio track Next"
+bindr = ,XF86AudioMute, exec, wpctl set-mute $audioSink toggle
 binde = ,XF86AudioRaiseVolume,exec, wpctl set-volume -l 1.0 $audioSink .10+
 binde = ,XF86AudioLowerVolume,exec, wpctl set-volume -l 1.0 $audioSink .10-
 
@@ -176,8 +183,13 @@ bind = $mainMod SHIFT, L, exec, hyprlock & systemctl suspend
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = ,Print,exec, $scriptDir/screenshot screen
 bind = SHIFT, Print,exec, $scriptDir/screenshot area
-bind = $mainMod, I, exec,f $scriptDir/hyprcolor hex
+bind = $mainMod, I, exec, $scriptDir/hyprcolor hex
 # bind = ,XF86RFKill,exec,$scriptDir/wifitoggle
 # bind = ,XF86RFKill,exec,$scriptDir/vpntoggle
 
+# Pass through options to discord
+# bindn = ,Alt_R,pass,^(discord)$
+# bindn = ,Control_R,pass,^(discord)$
 
+# bindn = ,Alt_R,pass,^(vesktop)$
+# bindn = ,Control_R,pass,^(vesktop)$
