--- a/.config/hypr/hypr.d/exec-once.conf
+++ b/.config/hypr/hypr.d/exec-once.conf
@@ -1,18 +1,28 @@
 # Notifcations
-exec-once = dunst & 
+exec-once = dunst &
 # status bar
-exec-once = waybar & 
-# wall paper manager
-exec-once = swww-daemon & 
-exec-once = switchwallpaper ~/.wallpapers/catppuccin-wallpapers/minimalistic/cats.png
+exec-once = waybar &
 # Idle manager
-exec-once = hypridle & 
+exec-once = hypridle &
 # Automount usbs
-exec-once = udiskie & 
+exec-once = udiskie &
 # Auth agent
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# All the daemons
+exec-once = openrazer-daemon &
+exec-once = playerctld daemon &
+exec-once = thunar --daemon &
+exec-once = swww-daemon & swww restore
+# exec-once = gamemoded &
 
 
 # clip board - cliphist
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+
+# Extra user
+exec-once = flatpak run com.discordapp.Discord &
+# exec-once = flatpak run dev.vencord.Vesktop &
+exec-once = flatpak run com.valvesoftware.Steam &
+exec-once = youtube-music &
+exec-once = noisetorch -i
