--- a/.config/hypr/hypr.d/win-rules.conf
+++ b/.config/hypr/hypr.d/win-rules.conf
@@ -1,12 +1,12 @@
 # Ensure rofi stays foucused
 $apprunnerClass = Rofi
 windowrulev2 = stayfocused, class:$apprunner
-windowrulev2 = forceinput, class:$apprunner
+#windowrulev2 = forceinput, class:$apprunner
 
 # Ensure kde polkit is foucsed too
 $polkitClass = org.kde.polkit-kde-authentication-agent-1
 windowrulev2 = stayfocused, class:$polkit
-windowrulev2 = forceinput, class:$polkit
+#windowrulev2 = forceinput, class:$polkit
 windowrulev2 = dimaround, class:$polkit
 
 # Disable fullscreen/maximize requests
@@ -18,3 +18,21 @@ windowrulev2 = float,title:^(.*Bitwarden.*)$
 windowrulev2 = dimaround,title:^(.*Bitwarden.*)$ 
 windowrulev2 = bordercolor rgb(FFFF00),title:^(.*Extension:.*)$,class:(firefox)
 # "Extension: (Bitwarden - Free Password Manager) - Bitwarden — Mozilla Firefox"
+
+# Move discord to workspace 4
+windowrulev2 = workspace 4 silent,class:discord
+windowrulev2 = workspace 4 silent,class:vesktop
+
+
+# Move steam to workspace 5
+windowrulev2 = workspace 5 silent,class:steam title:Steam
+
+# Move youtube music to workspace 6
+windowrulev2 = workspace 6 silent,class:(YouTube Music)
+
+
+# Highlight xwayland winodws
+windowrulev2 = bordercolor $yellow,xwayland:1
+
+# Move any and all steam games to workspace 3
+windowrulev2 = workspace 3, class:(steam_app_*)
