--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -6,18 +6,15 @@
         "hyprland/workspaces"
     ],
     "modules-center": [
-        "hyprland/window"
+        // "hyprland/window",
+        "mpris"
     ],
     "modules-right": [
         "tray",
-        "battery",
-        "idle_inhibitor",
-        "backlight",
         "cpu",
         // "memory",
         "network",
         "custom/wireguard",
-        "bluetooth",
         // "keyboard-state",
         // "custom/updates",
         "pulseaudio",
@@ -38,21 +35,34 @@
             "special": " "
         },
         "window-rewrite-default": "",
+        "persistent-workspaces": {
+            "*": [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9,
+                "magic"
+            ], // Display 1
+        },
         "window-rewrite": {
             "class<vesktop>": " ",
             "class<discord>": " ",
             "class<firefox>": " ",
+            "class<YouTube Music>": " ",
             "class<code>": " ",
             "class<code-url-handler>": " ",
             "class<kitty>": " ",
             "class<.*prismlauncher.*>": " ",
-            "class<firefox> title<.*youtube.*>": " ",
+            "class<firefox> title<.*YouTube — Mozilla Firefox.*>": " ",
             "class<kitty> title<cava>": " ",
-            "class<steam>": " ",
-            "class<.*Minecraft.*>": " "
-        },
-        "persistent-workspaces": {
-            "*": 10
+            "class<steam> title<Steam>": " ",
+            "class<.*Minecraft.*>": " ",
+            "class<obsidian>":" "
         }
     },
     "idle_inhibitor": {
@@ -69,7 +79,7 @@
         "spacing": 10
     },
     "clock": {
-        "format": "{:%R}",
+        "format": "{:%r}",
         // "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
     "cpu": {
@@ -169,6 +179,20 @@
         "on-click": "pavucontrol",
         "ignored-sinks": [
             "Easy Effects Sink"
+        ]
+    },
+    "mpris": {
+        "interval": 1,
+        "format": "{title} - {artist} <small>[{position}/{length}]</small> {status_icon}",
+        "tooltip-format": "{title} - {artist} <small>[{position}/{length}]</small> {status_icon}",
+        "status-icons": {
+            "paused": "",
+            "playing": "",
+            "stopped": ""
+        },
+        "dynamic-len": 50,
+        "ignored-players": [
+            "firefox"
         ]
     },
     "custom/updates": {
