--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,6 +1,6 @@
-Net/ThemeName "Adwaita"
-Net/IconThemeName "Adwaita"
-Gtk/CursorThemeName "Adwaita"
+Net/ThemeName "catppuccin-mocha-sapphire-standard+default"
+Net/IconThemeName "breeze-dark"
+Gtk/CursorThemeName "default"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
 Xft/Antialias 1
