--- a/.config/hypr/hypr.d/exec-once.conf
+++ b/.config/hypr/hypr.d/exec-once.conf
@@ -7,7 +7,8 @@ exec-once = hypridle &
 # Automount usbs
 exec-once = udiskie &
 # Auth agent
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+#exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = systemctl --user start hyprpolkitagent
 # All the daemons
 exec-once = openrazer-daemon &
 exec-once = playerctld daemon &
@@ -23,6 +24,6 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # Extra user
 exec-once = flatpak run com.discordapp.Discord &
 # exec-once = flatpak run dev.vencord.Vesktop &
-exec-once = flatpak run com.valvesoftware.Steam &
-exec-once = youtube-music &
+#exec-once = flatpak run com.valvesoftware.Steam &
+#exec-once = youtube-music &
 exec-once = noisetorch -i
