--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ source = $sourceDir/mocha.conf
 source = $sourceDir/exec-once.conf
 source = $sourceDir/win-rules.conf
 source = $hyprDir/monitors.conf
+source = $hyprDir/workspaces.conf
 
 
 # debug:disable_logs = false
@@ -34,7 +35,7 @@ input {
         natural_scroll = yes
     }
 
-    sensitivity = -0.3
+    sensitivity = -0.7
 }
 
 general {
