--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,7 +1,7 @@
 listener {
     timeout = 60000
-    # on-timeout = hyprlock
-    on-resume = notify-send "Welcome back!"
+    #on-timeout = hyprlock
+    #on-resume = notify-send "Welcome back!"
 }
 
 listener {
